--- a/WebContent/tiposDescuentos_form.html
+++ b/WebContent/tiposDescuentos_form.html
@@ -5,7 +5,7 @@
     <head>
 
         <meta charset="utf-8">
-        <title>Andia - Responsive Agency Template</title>
+        <title>Tipos Descuentos</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="">
         <meta name="author" content="">
@@ -51,7 +51,9 @@
                                     <li>
                                         <a href="portfolio.html"><i class="icon-user"></i><br />Empleados</a>
                                     </li>
-                                    
+                                    <li>
+                                        <a href="contact.html"><i class="icon-adjust"></i><br />Genero</a>
+                                    </li>
                                     <li>
                                         <a href="#"><i class="icon-th-list"></i><br />Puestos</a>
                                     </li>
