--- a/WebContent/BoletaPago_form.html
+++ b/WebContent/BoletaPago_form.html
@@ -99,8 +99,8 @@
             <form method="post" action="BoletaPago.jsp">
                 <div class="otro span5" style="float:left">
                     
-                        <label for="id" class="nameLabel">Id boleta</label>
-                          <input id="id" type="text" name="id" placeholder="Ingrese una ID" maxlength="5">
+                        <!-- <label for="id" class="nameLabel">Id boleta</label>
+                          <input id="id" type="text" name="id" placeholder="Ingrese una ID" maxlength="5"> -->
                         
                         <label for="periodo">Periodo de pago</label>
                           <input id="periodo" type="text" name="periodo" placeholder="Ingrese el periodo de pago">
