--- a/WebContent/Empleado2.html
+++ b/WebContent/Empleado2.html
@@ -5,7 +5,7 @@
 <title>Probando Empleado</title>
 </head>
 <body>
-<form name="materia" action="empleado.jsp" method="post">
+<form name="empleado" action="empleado2.jsp" method="post">
 <p>
 Introduzca los datos del Empleado:<br><br>
 Id del Empleado:<input type="text" name="idemp"><br>
